--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -24,10 +24,10 @@
             <a href="/admin/{{ order.id }}">{{ order.description }}</a>
           </td>
           <td>
-            <p>{{ order.createdAt }}</p>
+            <p>{{ formatDate order.createdAt }}</p>
           </td>
           <td>
-            <p>{{ order.charge.amount }}</p>
+            <p>{{ formatCurrency order.charge.amount }}</p>
           </td>
           <td>
             <p>{{ order.email }}</p>
