--- a/views/cart/checkout.handlebars
+++ b/views/cart/checkout.handlebars
@@ -37,7 +37,7 @@
                             <div class="form-group">
                                 <div class="col-xs-12">
                                     <strong>Order Total</strong>
-                                    <div class="pull-right"><span>$</span><span>{{total}}</span></div>
+                                    <div class="pull-right"><span>{{formatCurrency total}}</span></div>
                                 </div>
                             </div>
 
@@ -49,7 +49,7 @@
                         <script
                           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                           data-key="{{ STRIPE_PK }}"
-                          data-amount=
+                          data-amount="{{parseAmount total}}"
                           data-name="Stripe Node Test"
                           data-description="Widget"
                           data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
