--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -31,7 +31,7 @@
             </div>
           </div>
         </td>
-        <td data-th="Price">${{product.price}}</td>
+        <td data-th="Price">{{ formatCurrency product.price}}</td>
         <td data-th="Quantity">
           <form action="/cart/updateQuantity" method="POST">
           <input type="number" class="form-control text-center" name="productQuantity" value="{{product.quantity}}">
@@ -56,7 +56,7 @@
       <tr>
         <td><a href="/" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
         <td colspan="2" class="hidden-xs"></td>
-        <td class="hidden-xs text-center"><strong>Total: $ {{total}}.00</strong></td>
+        <td class="hidden-xs text-center"><strong>Total: {{formatCurrency total}}</strong></td>
         <td><br><form action="/cart/checkout" method="GET">
           <button type="submit" class="btn btn-primary">CheckOut</button>
         </form><br>
