--- a/views/orders/show.handlebars
+++ b/views/orders/show.handlebars
@@ -84,7 +84,7 @@
         </tr>
         <tr>
           <td>Card Type</td>
-          <td>Visa</td>
+          <td>{{ order.stripe.source.brand }}</td>
         </tr>
       </tbody>
     </table>
