--- a/views/analytics/index.handlebars
+++ b/views/analytics/index.handlebars
@@ -1,52 +1,93 @@
 <header class="page-header">
-  <h1 class="text-center mb-5">Admin Orders</h1>
+  <h1 class="text-center mb-5">Admin Analytics</h1>
 </header>
 
-{{#if orders.length }}
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Order Id</th>
-        <th>Products</th>
-        <th>Date</th>
-        <th>Revenue</th>
-        <th>Email</th>
-        <th>State</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each orders as |order| }}
-      <tr>
-        <td>
-          <a href="/analytics/{{ order._id }}">{{ order._id }}</a>
-        </td>
-        <td>
-          <ul>
-            {{#each order.products as |product|}}
-              <li>
-                <a href="/products/{{product.id}}">
-                  {{ product.name }}
-                </a>
-              </li>
-            {{/each}}
-          </ul>
-        </td>
-        <td>
-          {{ order.createdAt }}
-        </td>
-        <td>
-          {{ currency order.total }}
-        </td>
-        <td>
-          {{ order.email }}</a>
-        </td>
-        <td>
-          {{ order.state }}</a>
-        </td>
-      </tr>
-      {{/each }}
-    </tbody>
-  </table>
-{{else }}
-  <p class="text-danger">No orders</p>
-{{/if }}
+<div class="row">
+  <div class="col-sm-6">
+    <h3 class="text-center mb-4">Totals</h3>
+    {{#each totals as |total|}}
+    <table class="table table-bordered">
+      <tbody>
+        <tr>
+          <td>Total Revenue</td>
+          <td>{{  }}</td>
+        </tr>
+        <tr>
+          <td>Units Sold</td>
+          <td>{{  }}</td>
+        </tr>
+        <tr>
+          <td>Transactions</td>
+          <td>{{  }}</td>
+        </tr>
+        <tr>
+          <td>Customers</td>
+          <td>{{ }}</td>
+        </tr>
+        <tr>
+          <td>Products</td>
+          <td>{{  }}</td>
+        </tr>
+        <tr>
+          <td>Categories</td>
+          <td>{{  }}</td>
+        </tr>
+        <tr>
+          <td>States</td>
+          <td>{{  }}</td>
+        </tr>
+      </tbody>
+    </table>
+    {{/each}}
+  </div>
+
+  <div class="col-sm-6">
+    <h3 class="text-center mb-4">Customer Info</h3>
+    <table class="table table-bordered">
+      <tbody>
+        <tr>
+          <td>First Name</td>
+          <td>{{ order.fname }}</td>
+        </tr>
+        <tr>
+          <td>Last Name</td>
+          <td>{{ order.lname }}</td>
+        </tr>
+        <tr>
+          <td>Email</td>
+          <td>{{ order.email }}</td>
+        </tr>
+        <tr>
+          <td>Street</td>
+          <td>{{ order.street }}</td>
+        </tr>
+        <tr>
+          <td>City</td>
+          <td>{{ order.city }}</td>
+        </tr>
+        <tr>
+          <td>State</td>
+          <td>{{ order.state }}</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <h3 class="text-center mb-4">Order Info</h3>
+    <table class="table table-bordered">
+      <tbody>
+        <tr>
+          <td>Checkout Date</td>
+          <td>{{ order.createdAt }}</td>
+        </tr>
+        <tr>
+          <td>Stripe Token</td>
+          <td>{{ order.stripeToken }}</td>
+        </tr>
+        <tr>
+          <td>Card Type</td>
+          <td>Visa</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
