--- a/views/checkouts/show.handlebars
+++ b/views/checkouts/show.handlebars
@@ -1,1 +1,7 @@
-<h1>Congrats you bought some stuff!!!!</h1>
+<div>
+  Your order has been successfully submitted.
+</div>
+<br>
+<div>
+  <a href="/products">Back to Products</a>
+</div>
