--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -19,9 +19,13 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="/cart">View Cart</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="/cart/clear">Remove All Items</a>
           </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/orders">
+            <img class="nav-image" src="/orders.svg">
+          </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/analytics">
