add totals functions to analytics module

--- a/views/orders/index.handlebars
+++ b/views/orders/index.handlebars
@@ -35,7 +35,7 @@
           {{ order.createdAt }}
         </td>
         <td>
-          {{ currency order.total }}
+          {{ currency order.revenue }}
         </td>
         <td>
           {{ order.email }}</a>
