--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -60,5 +60,5 @@
 
 
 {{else }}
-  <p class="text-danger">No products</p>
+  <p class="text-danger text-center">There are no products in the database.</p>
 {{/if }}
