--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -26,5 +26,5 @@
   </div>
 
 {{else }}
-  <p class="text-danger">No related products</p>
+  <p class="text-danger text-center">There are no related products for this category.</p>
 {{/if }}
