--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,17 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Roboto, Arial, sans-serif;
 }
 
+h1 {
+  font-size: 2rem;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+  color: #d9534f;
+}
+
 body {
   font-family: "Source Sans Pro", Arial, sans-serif;
-  padding: 100px 0 50px 0;
+  padding: 110px 0 50px 0;
+  background-color: #f3f3f3;
 }
 
 nav {
@@ -12,8 +20,10 @@ nav {
 }
 
 .navbar-brand {
-  font-weight: 800;
   font-size: 24px;
+  font-weight: 800;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 
 .main-image {
@@ -68,6 +78,7 @@ nav {
   height: 140px;
   border-radius: 5px;
   padding: 10px 10px;
+  background-color: white;
 }
 
 .checkout-image-container {
