--- a/views/checkouts/new.handlebars
+++ b/views/checkouts/new.handlebars
@@ -1,7 +1,6 @@
 {{#if products.length }}
   <div class="row">
 
-
     <div class="col-sm-5">
       {{#each products as |product| }}
         <div class="checkout-item my-3">
@@ -25,10 +24,10 @@
           </div>
         </div>
       {{/each }}
-      <div id="total" class="bigger">
+      <div id="total" class="bigger text-danger">
         Total:
       </div>
-      <span class="bigger">{{currency total}}</span>
+      <span class="bigger text-danger">{{currency total}}</span>
     </div>
 
     <div class="offset-sm-1 col-sm-6">
@@ -118,10 +117,11 @@
           </select>
         </div>
 
-        <div class="mt-3">
+        <div class="mt-5">
           <div class="form-group float-right">
             <script
-              src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+              src="https://checkout.stripe.com/checkout.js"
+              class="stripe-button"
               data-key="{{ STRIPE_PK }}"
               data-amount="{{stripeTotal}}"
               data-name="Stripe Node Test"
@@ -140,8 +140,6 @@
     </div>
   </div>
 
-
-
 {{else }}
-  <p class="text-danger">No products</p>
+  <p class="text-danger text-center">There are no items in your shopping cart.</p>
 {{/if }}
