--- a/views/orders/show.handlebars
+++ b/views/orders/show.handlebars
@@ -6,10 +6,10 @@
   <div class="col-sm-6">
     <h3 class="text-center mb-4">Products</h3>
     {{#each order.products as |product|}}
-    <table class="table table-bordered">
-      <thead class="thead-default">
-        <tr>
-          <th colspan="2">
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr class="bg-danger">
+          <th class="text-white" colspan="2">
             {{ product.name }}
           </th>
         </tr>
@@ -42,7 +42,7 @@
 
   <div class="col-sm-6">
     <h3 class="text-center mb-4">Customer Info</h3>
-    <table class="table table-bordered">
+    <table class="table table-bordered table-striped">
       <tbody>
         <tr>
           <td>First Name</td>
@@ -72,7 +72,7 @@
     </table>
 
     <h3 class="text-center mb-4">Order Info</h3>
-    <table class="table table-bordered">
+    <table class="table table-bordered table-striped">
       <tbody>
         <tr>
           <td>Checkout Date</td>
