--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -8,13 +8,13 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/products">
-            <img class="nav-image" src="/products.svg">
+            <img class="nav-image" src="/images/products.svg">
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img class="nav-image" src="/cart.svg">
+            <img class="nav-image" src="/images/cart.svg">
             <span class="ml-1">({{ cartQuantity }})</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -24,17 +24,17 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/orders">
-            <img class="nav-image" src="/orders.svg">
+            <img class="nav-image" src="/images/orders.svg">
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/analytics">
-            <img class="nav-image" src="/analytics.svg">
+            <img class="nav-image" src="/images/analytics.svg">
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/checkouts">
-            <img class="nav-image" src="/checkout.svg">
+            <img class="nav-image" src="/images/checkout.svg">
           </a>
         </li>
       </ul>
