--- a/views/cart/checkout.handlebars
+++ b/views/cart/checkout.handlebars
@@ -1,160 +1,148 @@
-<div class="container wrapper">
-            <div class="row cart-head">
-                <div class="container">
-                <div class="row">
-                </div>
-                <div class="row">
-                    <p></p>
-                </div>
+
+  <div class="row cart-body">
+    <form class="form-horizontal" method="POST" action="/cart/charges">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-push-6 col-sm-push-6">
+
+        <!--REVIEW ORDER-->
+        <div class="panel panel-info">
+          <div class="panel-heading">
+              Review Order <div class="pull-right"><small><a class="afix-1" href="/cart">Edit Cart</a></small></div>
+          </div>
+          <div class="panel-body">
+
+            {{#each cartProducts as |product|}}
+            <div class="form-group">
+              <div class="col-sm-3 col-xs-3">
+                <img class="img-responsive" src="/images/{{product.photo}}" />
+              </div>
+              <div class="col-sm-6 col-xs-6">
+                <div class="col-xs-12">{{product.name}}</div>
+                <div class="col-xs-12"><small>Quantity: <span>{{product.quantity}}</span></small></div>
+              </div>
+              <div class="col-sm-3 col-xs-3 text-right">
+                  <h6><span>$</span>{{subtotal product}}</h6>
                 </div>
             </div>
-            <div class="row cart-body">
-                <form class="form-horizontal" method="POST" action="/cart/charges">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-push-6 col-sm-push-6">
-                    <!--REVIEW ORDER-->
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            Review Order <div class="pull-right"><small><a class="afix-1" href="#">Edit Cart</a></small></div>
-                        </div>
-                        <div class="panel-body">
+            <div class="form-group"><hr /></div>
+            {{/each}}
 
-                          {{#each cartProducts as |product|}}
-                            <div class="form-group">
-                                <div class="col-sm-3 col-xs-3">
-                                    <img class="img-responsive" src="/images/{{product.photo}}" />
-                                </div>
-                                <div class="col-sm-6 col-xs-6">
-                                    <div class="col-xs-12">{{product.name}}</div>
-                                    <div class="col-xs-12"><small>Quantity:<span>{{product.quantity}}</span></small></div>
-                                </div>
-                                <div class="col-sm-3 col-xs-3 text-right">
-                                    <h6><span>$</span>{{subtotal product}}</h6>
-                                </div>
-                            </div>
-                            <div class="form-group"><hr /></div>
-                            {{/each}}
+            <div class="form-group">
+              <div class="col-xs-12">
+                <strong>Order Total</strong>
+                <div class="pull-right"><span>{{formatCurrency total}}</span></div>
+              </div>
+            </div>
 
-                            <div class="form-group">
-                                <div class="col-xs-12">
-                                    <strong>Order Total</strong>
-                                    <div class="pull-right"><span>{{formatCurrency total}}</span></div>
-                                </div>
-                            </div>
-
-                        </div>
-                        </div>
-
-                        <!-- <form > -->
-                          <input type="hidden" value="{{total}}" name="amount">
-                        <script
-                          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                          data-key="{{ STRIPE_PK }}"
-                          data-amount="{{parseAmount total}}"
-                          data-name="Stripe Node Test"
-                          data-description="Widget"
-                          data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-                          data-locale="auto"></script>
-                      <!-- </form> -->
-
-                    <!--REVIEW ORDER END-->
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
-                    <!--SHIPPING METHOD-->
-                    <div class="panel panel-info">
-                        <div class="panel-heading">Address</div>
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <div class="col-md-12">
-                                    <h4>Shipping Address</h4>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-md-6 col-xs-12">
-                                    <strong>First Name:</strong>
-                                    <input required type="text" name="first_name" class="form-control" value="" />
-                                </div>
-                                <div class="span1"></div>
-                                <div class="col-md-6 col-xs-12">
-                                    <strong>Last Name:</strong>
-                                    <input required type="text" name="last_name" class="form-control" value="" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>Street:</strong></div>
-                                <div class="col-md-12">
-                                    <input required type="text" name="street" class="form-control" value="" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>City:</strong></div>
-                                <div class="col-md-12">
-                                    <input required type="text" name="city" class="form-control" value="" />
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12"><strong>State:</strong></div>
-                                <div class="col-md-12">
-                                  <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="state" id="state" style="width:100%">
-                                    <option value="AL">Alabama</option>
-                                  	<option value="AK">Alaska</option>
-                                  	<option value="AZ">Arizona</option>
-                                  	<option value="AR">Arkansas</option>
-                                  	<option value="CA">California</option>
-                                  	<option value="CO">Colorado</option>
-                                  	<option value="CT">Connecticut</option>
-                                  	<option value="DE">Delaware</option>
-                                  	<option value="DC">District Of Columbia</option>
-                                  	<option value="FL">Florida</option>
-                                  	<option value="GA">Georgia</option>
-                                  	<option value="HI">Hawaii</option>
-                                  	<option value="ID">Idaho</option>
-                                  	<option value="IL">Illinois</option>
-                                  	<option value="IN">Indiana</option>
-                                  	<option value="IA">Iowa</option>
-                                  	<option value="KS">Kansas</option>
-                                  	<option value="KY">Kentucky</option>
-                                  	<option value="LA">Louisiana</option>
-                                  	<option value="ME">Maine</option>
-                                  	<option value="MD">Maryland</option>
-                                  	<option value="MA">Massachusetts</option>
-                                  	<option value="MI">Michigan</option>
-                                  	<option value="MN">Minnesota</option>
-                                  	<option value="MS">Mississippi</option>
-                                  	<option value="MO">Missouri</option>
-                                  	<option value="MT">Montana</option>
-                                  	<option value="NE">Nebraska</option>
-                                  	<option value="NV">Nevada</option>
-                                  	<option value="NH">New Hampshire</option>
-                                  	<option value="NJ">New Jersey</option>
-                                  	<option value="NM">New Mexico</option>
-                                  	<option value="NY">New York</option>
-                                  	<option value="NC">North Carolina</option>
-                                  	<option value="ND">North Dakota</option>
-                                  	<option value="OH">Ohio</option>
-                                  	<option value="OK">Oklahoma</option>
-                                  	<option value="OR">Oregon</option>
-                                  	<option value="PA">Pennsylvania</option>
-                                  	<option value="RI">Rhode Island</option>
-                                  	<option value="SC">South Carolina</option>
-                                  	<option value="SD">South Dakota</option>
-                                  	<option value="TN">Tennessee</option>
-                                  	<option value="TX">Texas</option>
-                                  	<option value="UT">Utah</option>
-                                  	<option value="VT">Vermont</option>
-                                  	<option value="VA">Virginia</option>
-                                  	<option value="WA">Washington</option>
-                                  	<option value="WV">West Virginia</option>
-                                  	<option value="WI">Wisconsin</option>
-                                  	<option value="WY">Wyoming</option>
-                                  </select>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-              </form>
+            </div>
           </div>
-        <div class="row cart-footer">
+        <input type="hidden" value="{{total}}" name="amount">
+        <script
+          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="{{ STRIPE_PK }}"
+          data-amount="{{parseAmount total}}"
+          data-name="Stripe Node Test"
+          data-description="Widget"
+          data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+          data-locale="auto"></script>
+
       </div>
-    </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
+        <!--SHIPPING METHOD-->
+        <div class="panel panel-info">
+          <div class="panel-heading">Address</div>
+          <div class="panel-body">
+            <div class="form-group">
+              <div class="col-md-12">
+                <h4>Shipping Address</h4>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="col-md-6 col-xs-12">
+                <strong>First Name:</strong>
+                <input required type="text" name="first_name" class="form-control" value="" />
+              </div>
+              <div class="span1"></div>
+              <div class="col-md-6 col-xs-12">
+                <strong>Last Name:</strong>
+                <input required type="text" name="last_name" class="form-control" value="" />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-12"><strong>Street:</strong></div>
+              <div class="col-md-12">
+                <input required type="text" name="street" class="form-control" value="" />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-12"><strong>City:</strong></div>
+              <div class="col-md-12">
+                <input required type="text" name="city" class="form-control" value="" />
+              </div>
+            </div>
+              <div class="form-group">
+                <div class="col-md-12"><strong>State:</strong></div>
+                <div class="col-md-12">
+                  <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="state" id="state" style="width:100%">
+                    <option value="AL">Alabama</option>
+                  	<option value="AK">Alaska</option>
+                  	<option value="AZ">Arizona</option>
+                  	<option value="AR">Arkansas</option>
+                  	<option value="CA">California</option>
+                  	<option value="CO">Colorado</option>
+                  	<option value="CT">Connecticut</option>
+                  	<option value="DE">Delaware</option>
+                  	<option value="DC">District Of Columbia</option>
+                  	<option value="FL">Florida</option>
+                  	<option value="GA">Georgia</option>
+                  	<option value="HI">Hawaii</option>
+                  	<option value="ID">Idaho</option>
+                  	<option value="IL">Illinois</option>
+                  	<option value="IN">Indiana</option>
+                  	<option value="IA">Iowa</option>
+                  	<option value="KS">Kansas</option>
+                  	<option value="KY">Kentucky</option>
+                  	<option value="LA">Louisiana</option>
+                  	<option value="ME">Maine</option>
+                  	<option value="MD">Maryland</option>
+                  	<option value="MA">Massachusetts</option>
+                  	<option value="MI">Michigan</option>
+                  	<option value="MN">Minnesota</option>
+                  	<option value="MS">Mississippi</option>
+                  	<option value="MO">Missouri</option>
+                  	<option value="MT">Montana</option>
+                  	<option value="NE">Nebraska</option>
+                  	<option value="NV">Nevada</option>
+                  	<option value="NH">New Hampshire</option>
+                  	<option value="NJ">New Jersey</option>
+                  	<option value="NM">New Mexico</option>
+                  	<option value="NY">New York</option>
+                  	<option value="NC">North Carolina</option>
+                  	<option value="ND">North Dakota</option>
+                  	<option value="OH">Ohio</option>
+                  	<option value="OK">Oklahoma</option>
+                  	<option value="OR">Oregon</option>
+                  	<option value="PA">Pennsylvania</option>
+                  	<option value="RI">Rhode Island</option>
+                  	<option value="SC">South Carolina</option>
+                  	<option value="SD">South Dakota</option>
+                  	<option value="TN">Tennessee</option>
+                  	<option value="TX">Texas</option>
+                  	<option value="UT">Utah</option>
+                  	<option value="VT">Vermont</option>
+                  	<option value="VA">Virginia</option>
+                  	<option value="WA">Washington</option>
+                  	<option value="WV">West Virginia</option>
+                  	<option value="WI">Wisconsin</option>
+                  	<option value="WY">Wyoming</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </form>
+  </div>
+  <div class="row cart-footer">
+  </div>
