--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -1,7 +1,4 @@
 
-<!-- Page Content -->
-<div class="container">
-
   <!-- Jumbotron Header -->
   <header class="jumbotron hero-spacer">
     <h2>Your Shopping Cart</h2>
@@ -20,6 +17,7 @@
     </tr>
     </thead>
     <tbody>
+      {{#if cartProducts.length}}
       {{#each cartProducts as |product|}}
       <tr>
         <td data-th="Product">
@@ -36,7 +34,7 @@
           <form action="/cart/updateQuantity" method="POST">
           <input type="number" class="form-control text-center" name="productQuantity" value="{{product.quantity}}">
         </td>
-        <td data-th="Subtotal" class="text-center">${{subtotal product}}.00</td>
+        <td data-th="Subtotal" class="text-center">{{formatCurrency (subtotal product)}}</td>
         <td class="actions" data-th="">
           <input type="hidden" name="productId" value="{{product.id}}">
           <button class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
@@ -48,20 +46,23 @@
         </td>
       </tr>
       {{/each}}
+      {{else}}
+      <tr><p class="text-danger">Your Cart is Empty</p></tr>
+      {{/if}}
     </tbody>
     <tfoot>
       <tr class="visible-xs">
-        <td class="text-center"><strong>Total {{total}}.00</strong></td>
+        <td class="text-center"><strong>Total {{formatCurrency total}}</strong></td>
       </tr>
       <tr>
         <td><a href="/" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
         <td colspan="2" class="hidden-xs"></td>
         <td class="hidden-xs text-center"><strong>Total: {{formatCurrency total}}</strong></td>
-        <td><br><form action="/cart/checkout" method="GET">
-          <button type="submit" class="btn btn-primary">CheckOut</button>
-        </form><br>
+        <td><br>
+          <a href="/cart/checkout"><button type="submit" class="btn btn-primary">CheckOut</button></a>
+       <br>
         <form action="/cart/clear" method="POST">
-          <button type="submit" class="btn btn-danger">Clear Cart</button>
+          <button type="submit" class="btn btn-danger" style="margin-top:10px">Clear Cart</button>
         </form></td>
       </tr>
     </tfoot>
@@ -69,14 +70,3 @@
 
   <hr>
 
-  <!-- Footer -->
-  <footer>
-    <div class="row">
-      <div class="col-lg-12">
-          <p>Copyright &copy; Mimir's Market 2017</p>
-      </div>
-    </div>
-  </footer>
-
-</div>
-<!-- /.container -->
