--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,38 +1,26 @@
 
-
-<!-- Page Content -->
-<div class="container">
-
   <!-- Jumbotron Header -->
   <header class="jumbotron hero-spacer">
     <form class="form-inline text-center" action="/search" method="GET">
-      <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" style="width: 50%;" id="search_text" placeholder="Search" name="searchText">
-      <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-    <br>
-    <form class="form-inline text-center" action="/filter" method="GET">
-      <input type="number" name="minPrice" class="form-control mb-2 mr-sm-2 mb-sm-0" id="min_price" placeholder="Minimum Price">
-      <input type="number" name="maxPrice" class="form-control mb-2 mr-sm-2 mb-sm-0" id="max_price" placeholder="Maximum Price">
-      <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="product[categoryId]" id="category">
+      <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" style="width: 23%;" id="search_text" placeholder="Search" name="searchText" value="{{search}}">
+      <input type="number" name="minPrice" class="form-control mb-2 mr-sm-2 mb-sm-0" id="min_price" placeholder="Minimum Price" value="minPrice" style="width:14%">
+      <input type="number" name="maxPrice" class="form-control mb-2 mr-sm-2 mb-sm-0" id="max_price" placeholder="Maximum Price" value="maxPrice" style="width:14%">
+      <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="product[categoryId]" id="category" style="width:20%">
           <option selected value="">Choose Category: </option>
           {{#each categories as |category| }}
           <option value="{{ category.id }}">{{ category.name }}</option>
           {{/each }}
         </select>
-      <button type="submit" class="btn btn-primary">Filter</button>
-    </form>
-    <br>
-    <form class="form-inline text-center" action="/order" method="GET">
-      <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="orderBy" id="sort_by" style="width: 50%">
+      <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="orderBy" id="sort_by" style="width: 20%">
         <option value="">Order By:</option>
         <option value="&quot;name&quot;">By name ascending</option>
         <option value="&quot;name&quot; DESC">By name descending</option>
         <option value="&quot;price&quot;">By price ascending</option>
-        <option value="&quot;price&quot; DESC">By price ascending</option>
+        <option value="&quot;price&quot; DESC">By price descending</option>
         <option value="&quot;createdAt&quot;">Oldest first</option>
         <option value="&quot;createdAt&quot; DESC">Newest first</option>
       </select>
-      <button type="submit" class="btn btn-primary">Order</button>
+      <button type="submit" class="btn btn-primary">Search</button>
     </form>
   </header>
 
@@ -77,15 +65,3 @@
   <!-- /.row -->
 
   <hr>
-
-  <!-- Footer -->
-  <footer>
-      <div class="row">
-          <div class="col-lg-12">
-              <p>Copyright &copy; Mimir's Market 2017</p>
-          </div>
-      </div>
-  </footer>
-
-</div>
-<!-- /.container -->
