small stylign changes

--- a/views/checkouts/show.handlebars
+++ b/views/checkouts/show.handlebars
@@ -1,1 +1,5 @@
-<h1>Congrats you bought some stuff!!!!</h1>
+<div class="jumbotron">
+  <h1>Congrats you bought some super cool stuff!!!!</h1>
+  <p>If you need more amazing and fantastic things, please visit us again!</p>
+  <p><a class="btn btn-primary" href="/products" role="button">back to products</a></p>
+</div>
