--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -51,6 +51,7 @@
   <p class="card-text">
     <form action="cart/removeAll" method="post">
       <button type="submit" class="btn btn-danger">Destroy Everything</button>
+      <button href="/checkouts" class="btn btn-success" type="button" name="button">Checkout</button>
     </form>
   </p>
 {{else }}
